# PyDiffGame

./: .gitignore  .pre-commit-config.yaml  .pypirc  CITATIONS.bib  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Math.md  PyDiffGame.py  QuadRotorControl.py  QuadRotors.py  README.md  Scenarios.md  _config.yml  closedLoopAlgebraic.py  diffGameSolver.py  finiteHorizon.py  infiniteHorizon.py  pyproject.toml  requirements.txt  riccatiSolver.py  setup.py  simulations.py  stateSpace.py  twoPlayerGame.py
.github/workflows/: python-publish.yml  tests.yml
bck_6.6/: finiteHorizon.py
benchmarks/: README.md  catalog.py  harness.py  pdg_design.py  robust.py  robust_compare.py  run_anarchy.py  run_masses.py  run_robust_suite.py  runner.py
benchmarks/results/: ROBUSTNESS_REPORT.md  coupled_carts_anarchy.json  masses_pdg_vs_lqr.json  robust_DC_motor_servo.json  robust_PVTOL_aircraft.json  robust_active_suspension.json  robust_aircraft_short-period.json  robust_car_cruise_control.json  robust_car_lateral_(bicycle).json  robust_cart_(double_integrator).json  robust_cart_with_disturbance.json  robust_flexible_two-mass.json  robust_gantry_crane.json  robust_inverted_pendulum.json  robust_mass-spring-damper.json  robust_quadrotor_(planar).json  robust_seismic_building.json
benchmarks/systems/: masses.py
docs/: README.md
old/: closedLoopAlgebraic.py  simulations.py
src/PyDiffGame/: ContinuousPyDiffGame.py  DiscretePyDiffGame.py  LQR.py  LQRPyDiffGameComparison.py  Objective.py  PyDiffGame.py  PyDiffGameComparison.py  PyDiffGameLQRComparison.py  QuadRotorControl.py  __init__.py  _typing.py  base.py  comparison.py  continuous.py  discrete.py  lqr.py  objective.py  plotting.py  robust.py
src/PyDiffGame/examples/: ArticleExample.py  InvertedPendulum.py  InvertedPendulumComparison.py  MassesWithSprings.py  MassesWithSpringsComparison.py  OligopolisticCompetition.py  PVTOComparison.py  PVTOL.py  PVTOLComparison.py  QuadRotorControl.py
tests/: conftest.py  test_discrete.py  test_examples.py  test_game.py  test_lqr.py  test_objective.py  test_robust.py  test_simulation.py
tools/: animate_logo.py  bump_version.py  generate_readme_figures.py  render_logo.py
